--- a/11-23-2013.md
+++ b/11-23-2013.md
@@ -5,12 +5,15 @@ Statistics 157
 November 23rd, 2013
 
 Reflection 12
+===============
 
 On Tuesday we had a Skype conversation with Professor Luen. During this time we were able to ask him some questions such 
 as the code that he shared with everyone on github. We were also able to get his opinion on where we should go with the 
 rest of the project.
 It was really helpful, but I feel that we should really start figuring out the choices that Luen offered in terms of how to further our project. Specifically he noted that we should choose between the following two options as our next steps:
-#1.	Produce something that is more complicated. (more complicated than MDA but less complicated in the ETAS) which MIGHT be able to beat ETAS.
-#2.	Produce something that is very complicated. (more complicated than MDA and ETAS) which has a HIGHER CHANCE of beating ETAS.
+###Option 1.	
+Produce something that is more complicated. (more complicated than MDA but less complicated in the ETAS) which MIGHT be able to beat ETAS.
+###Option 2.
+Produce something that is very complicated. (more complicated than MDA and ETAS) which has a HIGHER CHANCE of beating ETAS.
 Both options have consequences. Choosing the first option would mean that our model would have more interpretability and may even a physical basis for which the design was made. Choosing the second model would allow us to beat ETAS, but it might lack the physical component and will not be very interpretable.
 So far I have created a googledoc of everyone’s notes on the conference call with professor Luen. It should now be accessible to the Analyzers and other groups who might find it useful. I have spoken to my group about the two options as outlined by professor Luen, but as a group we feel that the first option is far more feasible in light of what we have already. We feel that the first option is something which we have code for and can be easily enacted. The reason we have been stuck thus far however, is due to the fact that there are elements in the code that are missing or do not run correctly. To address this roadblock we have made efforts to contact professor Luen about this matter. Particularly, we hope that he will get back to us on what role the variable “K” plays in his code and where it comes from. Aside from this, my group, the Quakers, are working new ways to model the earthquake phenomena and will be meeting up this weekend to discuss further.
