Update and rename 11-28-2013 to 11-28-2013.md

--- a/11-28-2013.md
+++ b/11-28-2013.md
@@ -4,6 +4,8 @@ Statistics 157
 
 November 28th, 2013
 
+#Reflection 13
+
 This week Fernando Perez came to speak during lecture about his motivation for creating iPython and how iPython can be used
 for science. I was surprised that iPython was created out of a need for a better tools for science. The ability for iPython
 to be a useful scientific tool was not something that was clear to me prior to Fernando's talk. The projects that I have
