--- a/12-7-2013.md
+++ b/12-7-2013.md
@@ -1,4 +1,3 @@
-
 Xiaorui (Sherry) Xia
 
 Statistics 157
@@ -8,30 +7,30 @@ November 23rd, 2013
 Reflection 14
 ===============
 
-This week we went over what we needed to do for the rest of the semester. With the data science fair fast approaching
+This week we went over what we needed to do for the rest of the semester. With the data science fair fast approaching,
 the class as a whole has been scrambling to get the presentations ready for the final presentation at the data science fair.
-As a whole I really appreicated Carl and Sam taking the lead to organize a cohesive way through which the groups can
+I really appreicated Carl and Sam taking the lead to organize a cohesive way through which the groups can
 piece together what they have done so far so that the presenters can have a narrative with which to present. In particular,
-I really support the use of the google docs during class time to fill out the main repositories and what not each group
-has, so that the presenters can use this information in creating the presentation for the class. 
+I really support the use of class time to fill out the main repositories that each group has used for the project.
+I'm sure this information will be extremely helpful for the presenters. 
 
-One thing that I think the
-class needs to focus more on, which might have been lost half way through the class, is how reproducibility played into our
-project. For my group, the Quakers, we used a lot of code through R and other programs to visualize the earthquake data. This
+One thing that I think each individula group need to focus more on, which might have been lost half way through the class, is how reproducibility played a role in our
+projects. For my group, the Quakers, we use a lot of programming to to visualize the earthquake data. This
 information is hard to reproduce without an adequate understanding of the ETAS and MDA model. Even though our repositories
-are clearly labled, I can understand how other groups may have difficulty understand our code and rationale for doing various
-things in our project. One thing I think helped was the in class presentations from individual groups. While writting can 
-aid a person's ability to replicate a project, I think communication can better give the audience and undestanding of what
-we did. In particular, my group was very keen on presenting our progress so that other groups can know what we have done, and 
-be able to build upon what we did or ask questions and offer advice on what we have done so we can progress. This is why 
-we have also included our in class presentation power point links on github.
+are clearly labled, I can understand how other groups may have difficulty understanding our code and rationale for doing various
+things in our code. One thing that has mitigated this road black was the in class group presentations. While writing can
+aid a person's ability to reproduce a project, I think communication is a more effective way to give the audience an undestanding of what
+each group did. For this reason, my group was very keen on presenting our findings to the class so that other groups can know what we have done, and 
+be able to build upon what we did or ask questions and offer advice with which we can use to progress. This is why 
+we have also included our in class presentation power point links on github. We hope these resources will be adequate
+for reproducibility.
 
-One thing I'm confused about as of now is who is working on the suggestions made by professor Stark on Tuesday as other models
+One thing I'm confused about as of now is who is or will be working on the suggestions made by professor Stark on Tuesday as to the other model
 which we can explore to beat ETAS. I was a bit frustrated by the fact that this lecture was given so late during the semester.
-Had we had this insight prior to Tuesday, we may have been able to focus more time and energy into this idea. This is another
-reason for why I want to emphasis again the importance of having statistics graduate students or professor working along side 
-the class as part of any project that requires statistical analysis. I believe that had we had this support, we would have been
+Had we had this insight prior to Tuesday, we may have been able to focus more time and energy into this idea and have something more to deliver at the data science fair. This is another
+reason for why I want to emphasis again the importance of having statistics graduate students or a statistics professor working along side 
+the class. I believe that had we had this support, we would have been
 able to make more progress on the project then we did. 
 
 Overall, I would like thank the class administrators for a fun and interesting class. I am happy to have worked on this project
-and be exposed to the importance of open data, and reproducibility in science. Thanks so much!
+and be exposed to the importance of open data and reproducibility in science. Thanks so much!
